openapi added, rss-validation module removed, rss-api module added